--- a/data analytics.ipynb
+++ b/data analytics.ipynb
@@ -255,6 +255,7 @@
     }
    ],
    "source": [
+    "# top reviewed apps\n",
     "data.select('App', 'Reviews').groupBy('App').sum().orderBy('sum(Reviews)', ascending=False).show(10)"
    ]
   },
